--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,10 @@ tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
+[patch.crates-io]
+serde = { git = "https://github.com/serde-rs/serde", package = "serde" }
+serde_derive = { git = "https://github.com/serde-rs/serde", package = "serde_derive" }
+
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
