--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1"
 serde = { git = "https://github.com/serde-rs/serde", package = "serde" }
 serde_derive = { git = "https://github.com/serde-rs/serde", package = "serde_derive" }
 serde_json = { git = "https://github.com/serde-rs/json", package = "serde_json" }
+tauri = { git = "https://github.com/tauri-apps/tauri", package = "tauri" }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
