--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ serde_derive = { git = "https://github.com/serde-rs/serde", package = "serde_der
 serde_json = { git = "https://github.com/serde-rs/json", package = "serde_json" }
 tauri = { git = "https://github.com/tauri-apps/tauri", package = "tauri" }
 tauri-build = { git = "https://github.com/tauri-apps/tauri", package = "tauri-build" }
+itoa = { git = "https://github.com/dtolnay/itoa", package = "itoa" }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
