--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ serde_json = { git = "https://github.com/serde-rs/json", package = "serde_json" 
 tauri = { git = "https://github.com/tauri-apps/tauri", package = "tauri" }
 tauri-build = { git = "https://github.com/tauri-apps/tauri", package = "tauri-build" }
 itoa = { git = "https://github.com/dtolnay/itoa", package = "itoa" }
+memchr = { git = "https://github.com/BurntSushi/memchr", package = "memchr" }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
