--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ tauri = { git = "https://github.com/tauri-apps/tauri", package = "tauri" }
 tauri-build = { git = "https://github.com/tauri-apps/tauri", package = "tauri-build" }
 itoa = { git = "https://github.com/dtolnay/itoa", package = "itoa" }
 memchr = { git = "https://github.com/BurntSushi/memchr", package = "memchr" }
+ryu = { git = "https://github.com/dtolnay/ryu", package = "ryu" }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
