--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta.19", features = [] }
+tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta.25" }
+tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
@@ -23,7 +23,7 @@ tauri = { git = "https://github.com/tauri-apps/tauri", package = "tauri" }
 tauri-build = { git = "https://github.com/tauri-apps/tauri", package = "tauri-build" }
 itoa = { git = "https://github.com/dtolnay/itoa", package = "itoa" }
 memchr = { git = "https://github.com/BurntSushi/memchr", package = "memchr" }
-ryu = { git = "https://github.com/dtolnay/ryu", package = "ryu" }
+ryu = { git = "https://github.com/BurntSushi/memchr", package = "ryu" }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
