--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,7 +30,8 @@ encoding_rs = { git = "https://github.com/hsivonen/encoding_rs", package = "enco
 flate2 = { git = "https://github.com/rust-lang/flate2-rs", package = "flate2" }
 futures-util = { git = "https://github.com/rust-lang/futures-rs", package = "futures-util", branch = "0.3" }
 getrandom = { git = "https://github.com/rust-random/getrandom", package = "getrandom" }
-getrandomglob= { git = "https://github.com/rust-lang/glob", package = "glob" }
+glob = { git = "https://github.com/rust-lang/glob", package = "glob" }
+http = { git = "https://github.com/hyperium/http", package = "http" }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
